--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,56 @@ html {
 
 body {
   font-size: 10px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  height: 100vh;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
+  background: rgb(91, 192, 235);
+  background: linear-gradient(0deg, rgba(91, 192, 235, 1) 0%, rgba(253, 231, 76, 1) 100%);
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+}
+
+main {
+  background-color: #fff;
+  width: 800px;
+  padding: 20px;
+  height: 400px;
+  color: #3d3d3d;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.plate-number {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.plate-date {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1 {
+  font-size: 3em;
+  margin-top: 0;
+}
+
+label {
+  font-size: 2em;
+}
+
+input {
+  width: 40%;
+  text-align: center;
+}
+
+select {
+  width: 20%;
 }
