--- a/src/styles.css
+++ b/src/styles.css
@@ -17,8 +17,8 @@ body {
   height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
-  background: rgb(91, 192, 235);
-  background: linear-gradient(0deg, rgba(91, 192, 235, 1) 0%, rgba(253, 231, 76, 1) 100%);
+  background: rgb(218, 163, 106);
+  background: linear-gradient(0deg, rgba(218, 163, 106, 1) 0%, rgba(196, 156, 208, 1) 100%);
   display: flex;
   justify-content: center;
   padding-top: 100px;
@@ -26,10 +26,14 @@ body {
 
 main {
   background-color: #fff;
-  width: 800px;
-  padding: 20px;
-  height: 400px;
+  width: 500px;
+  padding: 40px;
+  height: 600px;
   color: #3d3d3d;
+  -webkit-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.4);
+  border-radius: 4px;
 }
 
 form {
@@ -51,19 +55,42 @@ form {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.5em;
   margin-top: 0;
+  margin-bottom: 40px;
+  font-weight: bold;
 }
 
 label {
-  font-size: 2em;
+  font-size: 1.8em;
+  margin-bottom: 20px;
 }
 
 input {
-  width: 40%;
+  width: 80%;
   text-align: center;
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 0.2em solid #dcdcdc;
+  border-radius: 4px;
 }
 
 select {
-  width: 20%;
+  width: 25%;
+  margin-bottom: 30px;
+  padding: 10px;
+  border: 0.2em solid #dcdcdc;
+  border-radius: 4px;
+}
+
+.submit {
+  margin-top: 20px;
+  width: 60%;
+  padding: 20px;
+  font-size: 1.3em;
+  color: #fff;
+  background-color: #27ae5f;
+  border: none;
+  border-radius: 4px;
+  font-weight: bold;
 }
