--- a/src/styles.css
+++ b/src/styles.css
@@ -28,12 +28,15 @@ main {
   background-color: #fff;
   width: 500px;
   padding: 40px;
-  height: 600px;
+  height: 650px;
   color: #3d3d3d;
   -webkit-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.4);
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.4);
   border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 form {
@@ -49,6 +52,12 @@ form {
 }
 
 .plate-date {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.plate-time {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -75,17 +84,9 @@ input {
   border-radius: 4px;
 }
 
-select {
-  width: 25%;
-  margin-bottom: 30px;
-  padding: 10px;
-  border: 0.2em solid #dcdcdc;
-  border-radius: 4px;
-}
-
 .submit {
   margin-top: 20px;
-  width: 60%;
+  width: 50%;
   padding: 20px;
   font-size: 1.3em;
   color: #fff;
@@ -93,4 +94,17 @@ select {
   border: none;
   border-radius: 4px;
   font-weight: bold;
+}
+
+.result-container {
+  margin-top: 30px;
+  border: 3px solid #27ae5f;
+  width: 70%;
+  border-radius: 4px;
+  height: 50px;
+  display: flex;
+  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
 }
